log

Thu 14 Mar 2024 08:22:48 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
528277c
Thu 14 Mar 2024 08:23:58 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
ef78018
Thu 14 Mar 2024 08:24:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8f02e17
Thu 14 Mar 2024 08:32:04 PM UTC: 
 exercises.c | 23 +++++++++++++++++++----
 1 file changed, 19 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   31 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
f121a85
Thu 14 Mar 2024 08:36:26 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
f57f3a6
Thu 14 Mar 2024 08:40:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:12: error: assignment to expression with array type
   34 |       temp = arr[i];
      |            ^
exercises.c:36:25: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   36 |       arr[size - i - 1] = temp;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
f5c6798
Thu 14 Mar 2024 08:44:12 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
d59860b
Thu 14 Mar 2024 08:59:36 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:49: error: expected ‘)’ before ‘;’ token
   53 |   int *newArr = (int *)malloc(size * sizeof(int);
      |                              ~                  ^
      |                                                 )
exercises.c:56:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   56 | }
      | ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:53:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   53 |   int *newArr = (int *)malloc(size * sizeof(int);
      |        ^~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63415a9
Thu 14 Mar 2024 08:59:53 PM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
Thu 14 Mar 2024 08:59:58 PM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
Thu 14 Mar 2024 09:03:37 PM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
test.c: In function ‘mergeSortedArrays’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
45e055c
Thu 14 Mar 2024 09:04:31 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
c3d0846
Thu 14 Mar 2024 09:16:33 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5438d02
Thu 14 Mar 2024 09:16:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
ca77cf2
Thu 14 Mar 2024 09:18:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
2119c20
Thu 14 Mar 2024 09:19:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
ed70a21
Thu 14 Mar 2024 09:22:55 PM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
809c253
Thu 14 Mar 2024 09:24:34 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7397f54
Sat 16 Mar 2024 10:40:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
00fb5d7
Sat 16 Mar 2024 10:50:09 PM UTC: 
 exercises.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:9: error: ‘newSize’ redeclared as different kind of symbol
   53 |   int (*newSize) = 0;
      |         ^~~~~~~
exercises.c:51:50: note: previous definition of ‘newSize’ with type ‘int *’
   51 | int *filterEvenNumbers(int arr[], int size, int *newSize)
      |                                             ~~~~~^~~~~~~
Compilation failed
665ffe1
Sat 16 Mar 2024 10:50:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:8: error: ‘newSize’ redeclared as different kind of symbol
   53 |   int *newSize = 0;
      |        ^~~~~~~
exercises.c:51:50: note: previous definition of ‘newSize’ with type ‘int *’
   51 | int *filterEvenNumbers(int arr[], int size, int *newSize)
      |                                             ~~~~~^~~~~~~
Compilation failed
b799f1b
Sat 16 Mar 2024 10:50:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:7: error: ‘newSize’ redeclared as different kind of symbol
   53 |   int newSize = 0;
      |       ^~~~~~~
exercises.c:51:50: note: previous definition of ‘newSize’ with type ‘int *’
   51 | int *filterEvenNumbers(int arr[], int size, int *newSize)
      |                                             ~~~~~^~~~~~~
exercises.c:58:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   58 |         (*newSize)++;
      |          ^~~~~~~~
exercises.c:62:32: error: invalid type argument of unary ‘*’ (have ‘int’)
   62 |   int *newArr = (int *)malloc((*newSize) * sizeof(int));
      |                                ^~~~~~~~
Compilation failed
6c27d12
Sat 16 Mar 2024 10:50:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
aa44f90
Sat 16 Mar 2024 10:58:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:95:7: error: expected expression before ‘}’ token
   95 |       }
      |       ^
Compilation failed
24c79e2
Sat 16 Mar 2024 10:58:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
50c9e9d
Sat 16 Mar 2024 11:01:41 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
616f9d7
